Update main page: Alignment fixes

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -3,7 +3,7 @@
 
 
    ========================================================================== */
- :root {
+:root {
    --website-background: #fff;
 
    --text-color-dark: #000;
@@ -24,7 +24,7 @@
    --border-radius-small: 8px;
    --border-radius-medium: 12px;
    --border-radius-big: 20px;
- }
+}
 
 
  /* ==========================================================================
@@ -32,7 +32,7 @@
 
 
    ========================================================================== */
- * {
+* {
    margin: 0;
    padding: 0;
 
@@ -43,15 +43,15 @@
    text-decoration: none;
    font-size: 14px;
    font-family: 'Inter', serif;
- }
+}
 
 
- html {
+html {
    scroll-behavior: smooth;
 
    font-size: 1em;
    line-height: 1.4;
- }
+}
 
 
  /* ==========================================================================
@@ -59,7 +59,7 @@
 
 
    ========================================================================== */
- body {
+body {
    display: grid;
 
    grid-template-columns: var(--side-bar-width) auto;
@@ -73,7 +73,7 @@
 
    background-color: var(--website-background);
    color: var(--text-color-dark);
- }
+}
 
 
  /* ==========================================================================
@@ -82,7 +82,7 @@
 
    ========================================================================== */
 
- #sidebar {
+#sidebar {
    grid-area: sidebar;
 
    height: 100hv;
@@ -96,7 +96,7 @@
 
    background-color: var(--sidebar-color);
    border-right: var(--primary-color) solid 1px;
- }
+}
 
  #backwards-button, #forward-button{
    margin-top: var(--spacing);
@@ -106,11 +106,12 @@
    justify-self: flex-end; /*FIXME: flex-end is not working, to move the settings button to the bottom*/
 }
 
+
  /* ==========================================================================
    Topbar 
 
    ========================================================================== */
- #topbar {
+#topbar {
    grid-area: topbar;
 
    display: flex;
@@ -129,18 +130,18 @@
 
    background-color: var(--topbar-color);
    border-bottom: var(--secondary-color) solid 1px;
- }
+}
 
- #thws-logo{
+#thws-logo{
    align-self: flex-start;
    height: 80%;
- }
+}
 
  /*
    File selection
  */
 
- #file-selection {
+#file-selection {
    display: flex;
    justify-content: right;
    align-items: center;
@@ -154,42 +155,42 @@
    padding: var(--spacing);
 
    background-color: var(--topbar-color);
- }
+}
 
- #file-selection-div {
+#file-selection-div {
    display: flex;
    flex-direction: row;
- }
+}
 
- #file-selection-text {
+#file-selection-text {
    display: flex;
    flex-direction: column;
- }
+}
 
 #file-code {
    display: flex;
    flex-direction: row;
    align-content: space-around;
    align-items: center;
- }
+}
 
- #file-selection-expand {
+#file-selection-expand {
    transform: rotate(180deg);
    margin: var(--spacing);
- }
+}
 
- [contenteditable="true"].editable-line {
+[contenteditable="true"].editable-line {
    white-space: nowrap;
-   width:200px;
+   width: 150px;
    overflow: hidden;
 } 
 [contenteditable="true"].editable-line br {
-   display:none;
+   display: none;
 
 }
 [contenteditable="true"].editable-line * {
-   display:inline;
-   white-space:nowrap;
+   display: inline;
+   white-space: nowrap;
 }
 
 
@@ -229,9 +230,10 @@
    flex-direction: row;
    align-content: space-around;
    align-items: center;
+   justify-content: center;
 }
 
-#simulator-controls{
+#simulator-controls {
    height: 60px;
 
    display: flex;
@@ -246,6 +248,7 @@
    flex-direction: column;
 }
 
+
  /* ==========================================================================
     Input
  
@@ -253,7 +256,16 @@
    ========================================================================== */
 #simulator-input {
    height: auto;
+
+   display: flex;
+   flex-direction: row;
+   align-content: space-around;
+   align-items: center;
+   justify-content: center;
+
+   margin: var(--spacing);
 }
+
 
 /* ==========================================================================
 Footer
